# timeline-track-editor

./: .gitignore  CMakeLists.txt  README.md  parameters.h
include/: audio-graph.h  audio-stream-container.h  audio-track.h  double-track-controls.h  double-track.h  editor-graph.h  mono-audio-track.h  openalsoft-player.h  parameters.h  playback-controls.h  stereo-audio-track.h  timeline-frame.h  timeline-ruler.h  timeline-track-editor.h  timeline-window.h  track.h
src/: audio-graph.cpp  audio-stream-container.cpp  audio-track.cpp  double-track-controls.cpp  double-track.cpp  editor-graph.cpp  mono-audio-track.cpp  openalsoft-player.cpp  playback-controls.cpp  stereo-audio-track.cpp  timeline-frame.cpp  timeline-ruler.cpp  timeline-track-editor.cpp  timeline-window.cpp  track.cpp
